themes/fullblack/config/waybar/style/style.css
@define-color primary whitesmoke;
@define-color alert #470000;
@define-color secondary #888888;


* {
	font-family: "JetbrainsMono Nerd Font";
	font-size: 14px;
	font-weight: 500;
	color: @primary;
	border: none;
	background: none;
	box-shadow: none;
}

tooltip {
	border-radius: 8px;
	background-color: rgba(0, 0, 0, 0.9);
}

#network {
	margin: 0 16px;
	transition: none;
	color: @primary;
	background: none;
}

#battery {
	margin: 0 16px;
	color: @primary;
}

#battery.charging, #battery.plugged {
	color: @primary;
}

#battery.critical:not(.charging) {
    color: @alert;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

@keyframes blink {
    to {
        color: #960000;
    }
}

#backlight {
	margin: 0 16px;
	color: @primary;
}

#clock {
	margin: 0 16px;
	color: @primary;
}

#tray {
	margin: 0 16px;
	color: @primary;
}

#custom-launcher {
	margin: 0 16px;
    	color: @primary;
}

#hyprland-workspaces {
	margin: 0 16px;
	color: @primary;
}

#workspaces button {
	color: @primary;
	transition: all 0.1s ease;
}

#workspaces button * {
	color: inherit;
	box-shadow: inherit;
}


#workspaces button:hover {
	padding-top: 10px;
}


#workspaces button.empty {
	color: @secondary;
}

#workspaces button.active {
	color: @primary;
}

#backlight {
	background: none;
	margin: 0 16px;
    	color: @primary;
}

